; ModuleID = '/home/carl/AnghaBench/git/extr_packfile.c_find_lru_pack.c'
source_filename = "/home/carl/AnghaBench/git/extr_packfile.c_find_lru_pack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.packed_git = type { i64, %struct.pack_window* }
%struct.pack_window = type { i64, i64, %struct.pack_window* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.packed_git*, %struct.packed_git**, %struct.pack_window**, i32*)* @find_lru_pack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @find_lru_pack(%struct.packed_git* %0, %struct.packed_git** %1, %struct.pack_window** %2, i32* %3) #0 {
  %5 = alloca %struct.packed_git*, align 8
  %6 = alloca %struct.packed_git**, align 8
  %7 = alloca %struct.pack_window**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.pack_window*, align 8
  %10 = alloca %struct.pack_window*, align 8
  %11 = alloca i32, align 4
  store %struct.packed_git* %0, %struct.packed_git** %5, align 8
  store %struct.packed_git** %1, %struct.packed_git*** %6, align 8
  store %struct.pack_window** %2, %struct.pack_window*** %7, align 8
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %11, align 4
  %12 = load %struct.packed_git**, %struct.packed_git*** %6, align 8
  %13 = load %struct.packed_git*, %struct.packed_git** %12, align 8
  %14 = icmp ne %struct.packed_git* %13, null
  br i1 %14, label %15, label %34

15:                                               ; preds = %4
  %16 = load %struct.pack_window**, %struct.pack_window*** %7, align 8
  %17 = load %struct.pack_window*, %struct.pack_window** %16, align 8
  %18 = icmp ne %struct.pack_window* %17, null
  br i1 %18, label %34, label %19

19:                                               ; preds = %15
  %20 = load %struct.packed_git*, %struct.packed_git** %5, align 8
  %21 = getelementptr inbounds %struct.packed_git, %struct.packed_git* %20, i32 0, i32 1
  %22 = load %struct.pack_window*, %struct.pack_window** %21, align 8
  %23 = icmp ne %struct.pack_window* %22, null
  br i1 %23, label %33, label %24

24:                                               ; preds = %19
  %25 = load %struct.packed_git*, %struct.packed_git** %5, align 8
  %26 = getelementptr inbounds %struct.packed_git, %struct.packed_git* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.packed_git**, %struct.packed_git*** %6, align 8
  %29 = load %struct.packed_git*, %struct.packed_git** %28, align 8
  %30 = getelementptr inbounds %struct.packed_git, %struct.packed_git* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp sgt i64 %27, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %24, %19
  br label %94

34:                                               ; preds = %24, %15, %4
  %35 = load %struct.packed_git*, %struct.packed_git** %5, align 8
  %36 = getelementptr inbounds %struct.packed_git, %struct.packed_git* %35, i32 0, i32 1
  %37 = load %struct.pack_window*, %struct.pack_window** %36, align 8
  store %struct.pack_window* %37, %struct.pack_window** %10, align 8
  store %struct.pack_window* %37, %struct.pack_window** %9, align 8
  br label %38

38:                                               ; preds = %83, %34
  %39 = load %struct.pack_window*, %struct.pack_window** %9, align 8
  %40 = icmp ne %struct.pack_window* %39, null
  br i1 %40, label %41, label %87

41:                                               ; preds = %38
  %42 = load %struct.pack_window*, %struct.pack_window** %9, align 8
  %43 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %42, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %53

46:                                               ; preds = %41
  %47 = load i32*, i32** %8, align 8
  %48 = load i32, i32* %47, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %46
  store i32 1, i32* %11, align 4
  br label %52

51:                                               ; preds = %46
  br label %94

52:                                               ; preds = %50
  br label %53

53:                                               ; preds = %52, %41
  %54 = load %struct.pack_window*, %struct.pack_window** %9, align 8
  %55 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %54, i32 0, i32 0
  %56 = load i64, i64* %55, align 8
  %57 = load %struct.pack_window*, %struct.pack_window** %10, align 8
  %58 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = icmp sgt i64 %56, %59
  br i1 %60, label %61, label %63

61:                                               ; preds = %53
  %62 = load %struct.pack_window*, %struct.pack_window** %9, align 8
  store %struct.pack_window* %62, %struct.pack_window** %10, align 8
  br label %63

63:                                               ; preds = %61, %53
  %64 = load %struct.pack_window**, %struct.pack_window*** %7, align 8
  %65 = load %struct.pack_window*, %struct.pack_window** %64, align 8
  %66 = icmp ne %struct.pack_window* %65, null
  br i1 %66, label %67, label %82

67:                                               ; preds = %63
  %68 = load i32*, i32** %8, align 8
  %69 = load i32, i32* %68, align 4
  %70 = load i32, i32* %11, align 4
  %71 = icmp eq i32 %69, %70
  br i1 %71, label %72, label %82

72:                                               ; preds = %67
  %73 = load %struct.pack_window*, %struct.pack_window** %10, align 8
  %74 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %73, i32 0, i32 0
  %75 = load i64, i64* %74, align 8
  %76 = load %struct.pack_window**, %struct.pack_window*** %7, align 8
  %77 = load %struct.pack_window*, %struct.pack_window** %76, align 8
  %78 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %77, i32 0, i32 0
  %79 = load i64, i64* %78, align 8
  %80 = icmp sgt i64 %75, %79
  br i1 %80, label %81, label %82

81:                                               ; preds = %72
  br label %94

82:                                               ; preds = %72, %67, %63
  br label %83

83:                                               ; preds = %82
  %84 = load %struct.pack_window*, %struct.pack_window** %9, align 8
  %85 = getelementptr inbounds %struct.pack_window, %struct.pack_window* %84, i32 0, i32 2
  %86 = load %struct.pack_window*, %struct.pack_window** %85, align 8
  store %struct.pack_window* %86, %struct.pack_window** %9, align 8
  br label %38

87:                                               ; preds = %38
  %88 = load %struct.pack_window*, %struct.pack_window** %10, align 8
  %89 = load %struct.pack_window**, %struct.pack_window*** %7, align 8
  store %struct.pack_window* %88, %struct.pack_window** %89, align 8
  %90 = load %struct.packed_git*, %struct.packed_git** %5, align 8
  %91 = load %struct.packed_git**, %struct.packed_git*** %6, align 8
  store %struct.packed_git* %90, %struct.packed_git** %91, align 8
  %92 = load i32, i32* %11, align 4
  %93 = load i32*, i32** %8, align 8
  store i32 %92, i32* %93, align 4
  br label %94

94:                                               ; preds = %87, %81, %51, %33
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
